# dwave-ocean-sdk

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  conf.py  dwave.rst  getting_started.rst  glossary.rst  index.rst  keyword_args.rst  meta CONTRIBUTING.rst  projects.rst  pyproject.toml  setup.cfg  setup.py  sysdocs.rst
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
_static/: cookie_notice.css
docs/: LICENSE  Makefile  README.md  README.rst  bibliography.rst  conf.py  docs_binarycsp  docs_cli.rst  docs_cloud  docs_dimod  docs_dnx  docs_gate  docs_greedy  docs_hybrid  docs_inspector  docs_inspector.rst  docs_minorminer  docs_neal  docs_optimization  docs_penalty  docs_preprocessing  docs_pyqubo.rst  docs_qbsolv.rst  docs_samplers  docs_system  docs_tabu  getting_started.rst  hidden.rst  index.rst  licenses.rst  pa11y.json  packages.rst  projects.rst  requirements.txt  section_ocean_api.rst
docs/_images/: optimization
docs/_static/: cookie_notice.js  theme_overrides.css  usa.adj
docs/_templates/: navbar-icon-links.html  ocean-version.html  page-source.html  page.html
docs/concepts/: bqm.rst  concepts_glossary.rst  concepts_topics.rst  cqm.rst  csp.rst  dqm.rst  embedding.rst  glossary.rst  hybrid.rst  index.rst  index_concepts.rst  models.rst  nl_model.rst  penalty.rst  qm.rst  samplers.rst  samplesets.rst  section_concepts_glossary.rst  solutions.rst  symbolic_math.rst  topology.rst  variables.rst
docs/dimod/: README.rst  introduction.rst  reference  shortindex.rst
docs/docs_greedy/: sdk_index.rst
docs/docs_neal/: intro.rst  sdk_index.rst
docs/docs_tabu/: intro.rst  sdk_index.rst
docs/downloadables/: 09-1263A-B_Advantage_system4_1_annealing_schedule.xlsx  09-1263A-C_Advantage_system4_annealing_schedule.xlsx  09-1265A-E_Advantage_system5_4_annealing_schedule.xlsx  09-1273A-E_Advantage_system6_4_annealing_schedule.xlsx  09-1273A-F_Advantage_system6_annealing_schedule.xlsx  09-1276A-A_Advantage_system7_1_annealing_schedule.xlsx  09-1302A-G_Advantage2_prototype2_6_annealing_schedule.xlsx  09-1312A-A_Advantage2_system1_1_annealing_schedule.xlsx  09-1312A-B_Advantage2_system1_2_annealing_schedule.xlsx  09-1312A-C_Advantage2_system1_3_annealing_schedule.xlsx  09-1312A-D_Advantage2_system1_4_annealing_schedule.xlsx  09-1312A-E_Advantage2_system1_5_annealing_schedule.xlsx  09-1312A-F_Advantage2_system1_6_annealing_schedule.xlsx  09-1312A-G_Advantage2_system1_7_annealing_schedule.xlsx  09-1312A-H_Advantage2_system1_8_annealing_schedule.xlsx  09-1312A-I_Advantage2_system1_9_annealing_schedule.xlsx  09-1312A-J_Advantage2_system1_10_annealing_schedule.xlsx  09-1312A-K_Advantage2_system1_11_annealing_schedule.xlsx  09-1312A-L_Advantage2_system1_12_annealing_schedule.xlsx  09-1312A-M_Advantage2_system1_13_annealing_schedule.xlsx  09-1312A-N_Advantage2_system1_annealing_schedule.xlsx  09-1317A-A_Advantage2_research1_1_annealing_schedule.xlsx  09-1317A-B_Advantage2_research1_2_annealing_schedule.xlsx  09-1317A-C_Advantage2_research1_3_annealing_schedule.xlsx  09-1317A-D_Advantage2_research1_4_annealing_schedule.xlsx  09-1317A-E_Advantage2_research1_5_annealing_schedule.xlsx  09-1317A-F_Advantage2_research1_annealing_schedule.xlsx  09-1323A-A_Advantage2_system4_1_annealing_schedule.xlsx  09-1323A-B_Advantage2_system4_2_annealing_schedule.xlsx  09-1323A-C_Advantage2_system4_3_annealing_schedule.xlsx  09-1323A-D_Advantage2_system4_annealing_schedule.xlsx  09-1323A-E_Advantage2_system4_research2_annealing_schedule.xlsx  09-1324A-A_Advantage2_system2_1_annealing_schedule.xlsx  scaling_for_production.ipynb  vignette_fss.csv  vignette_miplib.csv  vignette_object-tracking.csv  vignette_qap.csv  vignette_satellite.csv
docs/dwave-cloud-client/: README.rst  introduction.rst  reference  shortindex.rst
docs/dwave-hybrid/: README.rst  intro  (+2 more)
dwave/: __init__.py
dwave_sdk/: package_info.py  packages.py  universal_composites.py  universal_samplers.py
dwaveoceansdk/: __init__.py  package_info.py
examples/: and.rst  hybrid1.rst  map_coloring.rst  map_coloring_full_code.rst  map_kerberos.rst  max_cut.rst  min_vertex.rst  multi_gate.rst  not.rst  or.rst  scheduling.rst
overview/: cpu.rst  dwavesys.rst  install.rst  solving_problems.rst  stack.rst  technical_description.rst
sphinx_rtd_theme/: page.html
tests/: requirements.txt  test_entry_points.py  test_import.py  test_individually.py
(+406 files in other folders)
