[metadata]
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
name = dwave-ocean-sdk
project_urls =
    Changes = https://github.com/dwavesystems/dwave-ocean-sdk/releases
    Documentation = https://docs.dwavequantum.com/
    Source Code = https://github.com/dwavesystems/dwave-ocean-sdk
url = https://github.com/dwavesystems/dwave-ocean-sdk
version = attr: dwaveoceansdk.__version__

# keep description, author and author email up to date with dwaveoceansdk.package_info
author = D-Wave
author_email = tools@dwavesys.com
description = Software development kit for open source D-Wave tools

[options]
install_requires =
    dimod==0.12.21
    dwave-cloud-client==0.14.0
    dwave-gate==0.3.4
    dwave-hybrid==0.6.14
    dwave-inspector==0.5.5
    dwave-networkx==0.8.18
    dwave-optimization==0.6.4
    dwave-preprocessing==0.6.9
    dwave-samplers==1.6.0
    dwave-system==1.32.0
    dwavebinarycsp==0.3.1
    minorminer==0.2.19
    penaltymodel==1.2.0
packages = dwaveoceansdk
python_requires = >=3.9

[options.extras_require]
all =
